Semi Working ? Might need to re-add the else